# wizbit

./: .gitignore  .gitmodules  AUTHORS  MAINTAINERS  Makefile.am  Makefile.decl  README  autogen.sh  configure.ac  file.h  wiz  wizbit-uninstalled.pc.in  wizbit-widgets-uninstalled.pc.in  wizbit-widgets.pc.in  wizbit.pc.in
bindings/: Makefile.am
bindings/dotnet/: .gitignore  AssemblyInfo.cs.in  Makefile.am  Makefile.include  wizbit-sharp.dll.config  wizbit-sources.xml.in
bindings/python/: .gitignore
design/: bfs_sha1_exchange.py  bit-class-diagram.gaphor  class-diagram.dia  new_commits.py
docs/: Makefile.am
docs/wizbit/: Makefile.am  wizbit-docs.sgml  wizbit-sections.txt
fuse/: Makefile  dir-test.c  dir.c  fstore-test.c  fstore.c  inode.c  wiz-fs.h  wiz_fs.h
libwizbit/: .gitignore  Makefile.am  bit.vala  breadthfirst.vala  graph.vala  object.vala  reader.vala  store.vala  version.vala
m4/: DUMMY  dotnet-bindings.m4  python-bindings.m4
nautilus/: wizbit-extension.py
old/: Makefile.am
old/wizbit/: error.c  file.h  path.h  ref-store.c  repository.h  storage.h  vref.h
old/wizposix/: Makefile.am  Makefile.in  file-system.h
old/wizposix/gvfs/daemon/: gvfsbackendwizbit.c
old/wizview/: wizview.glade  wizview.py
po/: POTFILES.skip
python/: Makefile.am  __init__.py  wizbit.override  wizbitmodule.c
sandbox/: test_uuid.vala
test/: Makefile.am  confunit.py  directoryunit.py  repounit.py  sharesunit.py  test-file.c  test-storage.c  testsharesdb.py
tests/: Makefile.am  config.vapi  test-blob-store.vala  test-commit-store.vala  test-everything.vala  test-sync.vala  test-widget.vala  tests.vala
tests/data/: blob-data
vapi/: glib-2.0.vapi
vizbit/: Makefile.am  autogen.sh
vizbit/libwizbit/: Makefile.am  object.vala  store.vala
vizbit/libwizbit/stores/: git.vala
vizbit/po/: POTFILES.skip
vizbit/src/: main.vala
vizbit/tests/: Makefile.am  test-everything.vala
wizbit/: .gitignore  Conf.py  Directory.py  Makefile.am  Repo.py  Shares.py  __init__.py  add.py  bit.vala  blob_store.vala  breadthfirst.vala  clone.py  commit.vala  commit_builder.vala  commit_store.vala  commitinfo.py  conf.py  config.vapi  confunit.py  create.py  depthfirst.vala  directory.py  discovery.py  error.h  fake-repository.c  file.c  file.h  file.vala  graph.vala  iterator.vala  merge.py  notify.py  posixpath.c  ref-store.h  repo.py  repounit.py  server.py  shares.py  sharesdb.py  storage.c  (+14 more)
wizbit-widgets/: Makefile.am  timeline.vala  wiz_timeline.c  wiz_timeline.h
wizd/: discovery.py  gnotifier.py  notify.py  publish.py  sharedict.py  wizc.py  wizd.py
wizposix/: directory-disk.c  directory-disk.h  directory-entry.c  directory-entry.h  directory-file-system.c  directory-file-system.h  file-system.c
wizposix/gvfs/client/: wizuri.c
wizposix/gvfs/daemon/: gvfsbackendwizbit.h
wizview/: wizview.glade  wizview.py
